[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis-connectors"
version = "0.1.0"
description = "Artemis premium connectors for solstice-agent. Deep integrations for Camunda, and more."
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Solstice Studio"},
]
keywords = ["solstice", "agent", "camunda", "bpmn", "connector", "artemis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.25.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.entry-points."solstice_agent.connectors"]
camunda = "artemis.connectors.camunda:register_camunda_tools"

[project.urls]
Homepage = "https://github.com/Solasticeaistudio/artemis-connectors"
Repository = "https://github.com/Solasticeaistudio/artemis-connectors"

[tool.setuptools.packages.find]
include = ["artemis*"]
