[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis-connectors"
version = "0.2.0"
description = "Artemis premium connectors bundle for solstice-agent. Installs all connectors: Camunda, Salesforce, HubSpot, ServiceNow, Jira."
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Solstice Studio"}]
keywords = ["solstice", "agent", "camunda", "salesforce", "hubspot", "servicenow", "jira", "artemis", "connector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "artemis-camunda>=0.1.0",
    "artemis-salesforce>=0.1.0",
    "artemis-hubspot>=0.1.0",
    "artemis-servicenow>=0.1.0",
    "artemis-jira>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Solasticeaistudio/artemis-connectors"
